@@ -251,7 +251,7 @@ $(document).ready(function() {
 		LastPlanSelected: 0
 	};
 	
-	if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
+	if( /Android|webOS|iPhone|iPad|iPod|ZuneWP7|BlackBerry/i.test(navigator.userAgent) ) {
 		$.myglobals.ismobile=true;
 		$.myglobals.ismobileint=true;
 	}
