@@ -2,6 +2,8 @@ Version 1.0.xxxx (January xxth 2014)
 - Implemented: Initial Support for Forecast.io
 - Implemented: Temperature/Weaher widgets forecast button if hardware is WU/Forecast.io
 - Implemented: Widgets now turn yellow (if no timeout) if the battery level is <= 10 percent
+- Implemented: Temperature Month/Year graphs now display min/max as a range
+- Implemented: Temperature Month/Year graphs now displays Average Temperature
 
 Version 1.0.1396 (January 18th 2014)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
